--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,7 +1,6 @@
 .app__navbar {
     width: 100%;
     display: flex;
-    border: 2PX solid black;
     justify-content:  space-between;
     align-items: center;
     background: var(--color-black);
@@ -25,7 +24,7 @@
     justify-content: center;
     align-items: center;
 
-    list-style-type: none;
+    list-style: none;
 }
 
 .app__navbar-links li {
@@ -53,7 +52,7 @@
     border-bottom: 1px solid var(--color-golden);
 }
 
-.app__navbar-logo div {
+.app__navbar-login div {
     width: 1px;
     height: 30px;
     background: var(--color-grey);
